# sedona

./: .asf.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .htaccess  .licenseignore  .pre-commit-config.yaml  .pre-commit-docker.yaml  .prettierignore  .prettierrc  .project  .shellcheckrc  .travis.yml  AUTHORS  CITATION.cff  CONTRIBUTING.md  CSE598_Topics_in_Data_Systems_Abhishek_README  Circle.java  CircleRDD.java  ComparatorCollection  ComparatorCollection.java  DISCLAIMER  DISCLAIMER-WIP  ISSUE_2365_PLAN.md  LICENSE  Makefile  NOTICE  ParallelSpatialJoinWithGridID  ParallelSpatialRange  PartitionAssignGridPoint  PartitionAssignGridPolygon  PartitionAssignGridRectangle  PointRDD.java  PolygonPairRDD.java  PolygonRDD  PolygonRDD.java  PolygonRangeFilter  QuickStartProgram.java  README.md  (+32 more)
databricks-tester/: Makefile  README.md  pyproject.toml
databricks-tester/config/: cluster_configs.json  init_script.j2
databricks-tester/smoke-tests/: smoke_test.py
databricks-tester/src/sedona_databricks_tester/: __init__.py  __main__.py  cli.py  databricks_manager.py
python/: .gitignore  ApacheSedonaCore.ipynb  ApacheSedonaSQL.ipynb  GeoSparkCore.ipynb  GeoSparkSQL.ipynb  MANIFEST.in  Pipfile  README.md  ShowCase Notebook.ipynb  build_wheel.sh  geometryarray.py  pyproject.toml  pytest.ini  setup.py  spark_versions_config  version_tests.sh
python/docs/: Makefile  conf.py  make.bat
python/geo_pyspark/: exceptions.py  version.py
python/geo_pyspark/core/: __init__.py  geom_types.py  utils.py
python/geo_pyspark/data/: __init__.py  crs-test-point.csv  crs.test.properties  linestring.test.properties  primaryroads.csv
python/geo_pyspark/register/: __init__.py  geo_registrator.py  java_libs.py  uploading.py
python/geo_pyspark/sql/: enums.py  geometry.py  types.py
python/geo_pyspark/tests/: run_tests.sh  test_aggregate_functions.py  test_constructor_test.py  test_deserializers.py  test_function.py  test_geospark_serializers.py  test_predicate.py  test_predicate_join.py  test_serializers.py
python/geo_pyspark/utils/: __init__.py  abstract_parser.py  adapter.py  binary_parser.py  decorators.py  geometry_adapter.py  jvm.py  meta.py  parsers.py  prep.py  rdd_pickling.py  serde.py  spatial_rdd_parser.py  types.py
python/geo_wrapper/: build.sbt  spark_2_3  spark_2_4
python/geospark/: __init__.py  version.py
python/geospark/core/: __init__.py  geom_types.py
python/geospark/register/: __init__.py  geo_registrator.py  java_libs.py  uploading.py
python/geospark/sql/: exceptions.py  types.py
python/geospark/utils/: __init__.py  abstract_parser.py  adapter.py  binary_parser.py  decorators.py  geometry_adapter.py  jvm.py  meta.py  parsers.py  prep.py  serde.py  spatial_rdd_parser.py
python/sedona/: README.md  __init__.py  exceptions.py  version.py
python/sedona/core/: utils.py
python/sedona/db/: __init__.py  dbapi.py  telemetry.py  testing.py
python/sedona/doc/: Makefile  checkmake.ini  conf.py  index.rst  make.bat  modules.rst  sedona.core.SpatialRDD.rst  sedona.core.enums.rst  sedona.core.formatMapper.rst  sedona.core.formatMapper.shapefileParser.rst  sedona.core.geom.rst  sedona.core.jvm.rst  sedona.core.rst  sedona.core.spatialOperator.rst  sedona.flink.rst  sedona.geoarrow.rst  sedona.geopandas.api.rst  sedona.geopandas.rst  sedona.geopandas.tools.rst  sedona.maps.rst  sedona.raster.rst  sedona.raster_utils.rst  sedona.register.rst  sedona.rst  sedona.spark.core.SpatialRDD.rst  sedona.spark.core.enums.rst  sedona.spark.core.formatMapper.rst  sedona.spark.core.formatMapper.shapefileParser.rst  sedona.spark.core.geom.rst  sedona.spark.core.geom.shapely1.rst  sedona.spark.core.geom.shapely2.rst  sedona.spark.core.jvm.rst  sedona.spark.core.rst  sedona.spark.core.spatialOperator.rst  sedona.spark.geoarrow.rst  sedona.spark.geopandas.api.rst  sedona.spark.geopandas.io.rst  sedona.spark.geopandas.rst  sedona.spark.geopandas.tools.rst  sedona.spark.maps.rst  (+25 more)
python/sedona/flink/: __init__.py  context.py
python/sedona/geoarrow/: __init__.py
python/sedona/geopandas/: __init__.py  _typing.py  base.py  geodataframe.py  geoindex.py  geometryarray.py  geoseries.py  internal.py  io.py  sindex.py
python/sedona/maps/: SedonaKepler.py  SedonaMapUtils.py  SedonaPyDeck.py  __init__.py
python/sedona/raster/: __init__.py  awt_raster.py  data_buffer.py  meta.py  raster_serde.py  sample_model.py  sedona_raster.py
python/sedona/raster_utils/: SedonaUtils.py
python/sedona/register/: __init__.py  geo_registrator.py  java_libs.py  uploading.py
python/sedona/spark/: SedonaContext.py  __init__.py
python/sedona/sql/: __init__.py  connect.py  dataframe_api.py  functions.py  geometry.py  geometry_serde.py  st_aggregates.py  st_constructors.py  st_functions.py  st_predicates.py  types.py  udf.py
python/sedona/stac/: __init__.py  client.py  collection_client.py
python/sedona/stats/: weighting.py
python/sedona/utils/: __init__.py  abstract_parser.py  adapter.py  binary_parser.py  decorators.py  geoarrow.py  geometry_adapter.py  geometry_serde.py  geometry_serde_general.py  jvm.py  meta.py  parsers.py  prep.py  serde.py  spatial_rdd_parser.py  structured_adapter.py  types.py
python/sedona/visualization/: SedonaVisualization.py
python/src/: geom_buf.c  geom_buf.h  geomserde.c  geomserde.h  geomserde_speedup_module.c  geos_c_dyn.c  geos_c_dyn.h  geos_c_dyn_funcs.h
python/src/pygeos/: c_api.h
python/tests/: __init__.py  conftest.py  docker-compose.yaml  serializer_type.txt  test_assign_raw_spatial_rdd.py  test_base.py  test_circle.py  test_db.py  test_multiple_meta.py  test_path_compatibility.py  test_path_compatibility_all.py  test_scala_example.py  test_sedona_context.py  test_to_sedonadb.py  tools.py
python/tests/core/: test_avoiding_python_jvm_serde_df.py  test_avoiding_python_jvm_serde_to_geometry_df.py  test_avoiding_python_jvm_serde_to_rdd.py  test_config.py  test_core_geom_primitives.py  test_core_rdd.py  test_core_spatial_relations.py  test_geo_data.py  test_rdd.py  test_spatial_rdd_from_disc.py
python/tests/data/: __init__.py  point.test.properties  (+4 more)
(+32565 files in other folders)
