# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[tool.bandit]
exclude_dirs = ["python/tests"]
skips = ["B101"]

[tool.codespell]
ignore-words = '.github/linters/codespell.txt'
skip = './docs/image,./docs/usecases,./site,./spark/common/src/test/resources,./tools/maven/scalafmt.conf'

# ---------------------------------------------------------------------------
# Root pyproject.toml used only for documentation & dev dependency management.
# This is NOT a distributable Python package. Actual Sedona Python package is
# defined in python/pyproject.toml. Do not publish this meta project.
# ---------------------------------------------------------------------------
[project]
name = "sedona-monorepo-meta"
version = "0.0.0"
description = "Internal meta project for Sedona documentation and development tooling (not published)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"

[dependency-groups]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-jupyter",
  "mkdocs-macros-plugin",
  "pymdown-extensions",
  "mike",
  "blacken-docs",
  # TODO: sphinx_rtd_theme only supports Sphinx < 9.0, consider migrating to a different theme or wait for sphinx_rtd_theme to support Sphinx 9+
  # Using Sphinx 6.2.1 as it's the latest version supporting Python >= 3.8 (Sphinx 7+ requires Python >= 3.9, Sphinx 8+ requires Python >= 3.11)
  "sphinx==6.2.1",
  "sphinx_rtd_theme==3.0.2",
  "sphinx-autobuild",
]
dev = [
    "prek>=0.2.19"
]
